# AutoAD-Researcher

./: .dockerignore  .gitignore  3.10-l3-preflight.yaml  AGENTS.md  AutoAD_渐进式工程化演进路线.md  CLAUDE.md  README.md  REFERENCES.md  pyproject.toml
.streamlit/: config.toml
backups/: 0001-feat-wire-3.6-patch_planner-3.7-patch_applicator-sta.patch  0001-feat-wire-experiment-planner-stage-3.5-into-orchestr.patch  0001-fix-populate-hook-bindings-in-variant-generation-unb.patch  autoad-stage3-3.5-377eb3f.bundle  autoad-stage3-3.7-75bf3f2.bundle  autoad-stage3-3.7-fix-cf4c339.bundle
configs/: default.yaml
docker/: Dockerfile  docker-compose.offline.yml  docker-compose.yml
docs/: 3.0计划文档.md  3.10开发计划.md  3.1开发计划文档.md  3.2开发计划文档.md  3.2开发计划文档_PaperIntelligence_v1.1.md  3.3开发计划.md  3.4开发计划.md  3.5开发计划.md  3.6-3.7开发计划.md  3.8开发计划.md  3.9开发计划.md  AutoAD_Researcher_技术路线草案.md  AutoAD_任务参数决策与来源协议.md  AutoAD_参考资料汇总.md  AutoAD_真实纵向闭环开发计划.md  backend_framework_comparison.md  internal_benchmark_case.md  reference_provenance.md  repository-intelligence.md  修改计划.md  项目架构总结.md
frontend/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  playwright.fullstack.config.ts  vite.config.ts
notes/: 2026-06-15.md  2026-06-16.md  2026-06-17.md  2026-06-18.md  2026-06-19.md  2026-06-20.md  2026-06-26.md  2026-07-03.md  2026-07-04.md  2026-07-05.md  2026-07-06.md  2026-07-07.md  2026-07-08.md  2026-07-09.md  2026-07-10.md  2026-07-13.md  2026-07-14.md  2026-07-15.md  2026-07-16.md  2026-07-17.md  2026-07-18.md  2026-07-19.md  2026-07-20.md  2026-07-21.md  2026-07-22.md  (+4 more)
(+875 files in other folders)
