[project]
name = "autoad-researcher"
version = "0.1.0"
description = "面向异常检测的文献迁移与实验闭环智能体"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [
    { name = "AI4S Team" },
]
dependencies = [
    "pydantic>=2",
    "pyyaml>=6",
    "httpx>=0.27",
    "rich>=13",
    "packaging>=24",
    "deepagents>=0.6.10,<0.7",
    "fastapi>=0.139.0",
    "uvicorn>=0.50.2",
    "markitdown[docx]>=0.1.6",
]

[project.scripts]
autoad = "autoad_researcher.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ipython>=8",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autoad_researcher"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
